# level-thumbnails-server

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: style.css
frontend/src/components/: ChartCanvas.vue  DifficultyFace.vue  ImageDiffer.vue  Modal.vue
frontend/src/lib/: types.ts  utils.ts
frontend/src/managers/: session.ts
frontend/src/pages/: DashboardPage.vue  HomePage.vue
frontend/src/pages/Dashboard/: Dashboard.vue  Pending.vue  Settings.vue  Thumbnails.vue  Users.vue
migrations/: 20260312171932_level_locks.up.sql  20260312183237_submission_note.up.sql  20260312194905_pending_upsert.up.sql  20260312201641_indexes_and_stats.up.sql  20260511120000_user_history_index.up.sql  20260515000000_soft_delete_uploads.up.sql
src/: cache_controller.rs  database.rs  main.rs  util.rs
src/routes/: admin.rs  mod.rs  stats.rs  thumbnail.rs  upload.rs  user.rs
