[package]
name = "level-thumbnails-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
image = "0.25.10"
webp = "0.3.1"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.6" , features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json", "query", "form"] }
rand = "0.10.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
